--- a/CalendarView/Base.lproj/Main.storyboard
+++ b/CalendarView/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                 <color key="backgroundColor" red="1" green="1" blue="0.69720982142857146" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="j2c-5l-gpU">
-                                <rect key="frame" x="0.0" y="107" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="107" width="375" height="453"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oJi-NO-YmN">
@@ -69,13 +69,29 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TdV-FD-UN5">
+                                <rect key="frame" x="0.0" y="568" width="375" height="99"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Or3-oP-1wm">
+                                        <rect key="frame" x="8" y="0.0" width="359" height="91"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="calenderCollectionView" destination="j2c-5l-gpU" id="GTn-q1-7rc"/>
+                        <outlet property="calenderFooterView" destination="TdV-FD-UN5" id="qae-L5-fRt"/>
                         <outlet property="calenderHeaderView" destination="8oP-XA-DVf" id="0UE-SW-yNO"/>
+                        <outlet property="footerLabel" destination="Or3-oP-1wm" id="Pko-A5-yVE"/>
                         <outlet property="headerNextBtn" destination="jBo-U4-hDH" id="j2f-mb-Fdw"/>
                         <outlet property="headerPrevBtn" destination="U07-cO-jmD" id="jJw-lA-YEu"/>
                         <outlet property="headerTitle" destination="Rjs-dM-AIJ" id="AXl-fT-n0y"/>
